[fix] Fix spacing for mobile view for both header and body

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -86,11 +86,17 @@ h2 {
 @media (max-width: 500px) {
   .SectionA {
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column;
     padding: 1rem;
     margin: 0.5rem;
   }
   .SectionA h2 {
     margin: 2rem 0 0 0;
+  }
+
+  .header {
+    height: 64px;
+    padding: 0 10px;
+    line-height: 64px;
   }
 }
